--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "start": "node build/server.js",
+    "start": "node build/src/server.js",
     "build": "tsc"
   },
   "author": "",
